solve z-index nav error

--- a/client/src/res/css/style.css
+++ b/client/src/res/css/style.css
@@ -597,7 +597,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1500;
+  z-index: -1000;
   transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
 
 .navigation__list {
@@ -637,7 +637,8 @@ body {
 
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
-  width: 100%; }
+  width: 100%;
+  z-index: 1500; }
 
 .navigation__icon {
   position: relative;
