--- a/client/src/res/sass/layout/_navigation.scss
+++ b/client/src/res/sass/layout/_navigation.scss
@@ -68,12 +68,12 @@
         height: 100vh;
         width: 0;
         opacity: 0;
-       
+               
         position: fixed;
         // background-color: red;
         top: 0;
         left: 0;
-        z-index: 1500 ;
+        z-index: -1000 ;
         transition: all .8s cubic-bezier(0.68, -.55, 0.265, 1.55);
 
     }
@@ -127,6 +127,7 @@
     &__checkbox:checked ~ &__nav {
         opacity: 1;
         width: 100%;
+        z-index: 1500;
     }
 
     //Icon
